--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,4 @@
 {
   "appName": "Landina Coupon",
-  "@appName": {
-    "description": "The name of this app"
-  }
+  "searchField": "What are you looking for?"
 }
