--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,4 +1,5 @@
 {
   "appName": "لندینا کوپن",
-  "searchField": "دنبال چی می گردی؟"
+  "searchField": "دنبال چی می گردی؟",
+  "brandName": "نام برند"
 }
