--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,5 @@
 {
   "appName": "Landina Coupon",
-  "searchField": "What are you looking for?"
+  "searchField": "What are you looking for?",
+  "brandName": "Brand Name"
 }
