--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -4,5 +4,12 @@
   "couponTextTitle": "عنوان تخفیف موجود",
   "couponDescription": "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد",
   "copyCouponCode": "می خوام از  کد تخفیف استفاده کنم",
-  "brandName": "نام برند"
+  "brandName": "نام برند",
+  "loginPageDescription": "لطفا برای ورود به حساب کاربری خود اطلاعات زیر را وارد کنید.",
+  "landinaID": "شناسه لندینا",
+  "email": "ایمیل",
+  "password": "پسورد",
+  "loginToAccount": "ورود به حساب",
+  "forgetPass": "فراموشی رمز",
+  "createAnAccount": "ایجاد حساب کاربری"
 }
