--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -9,7 +9,7 @@
   "landinaID": "شناسه لندینا",
   "email": "ایمیل",
   "password": "پسورد",
-  "loginToAccount": "ورود به حساب",
+  "loginToAccount": "ورود به حساب من",
   "forgetPass": "فراموشی رمز",
   "createAnAccount": "ایجاد حساب کاربری"
 }
