--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,14 +1,25 @@
 {
   "appName": "Landina Coupon",
+  "profile": "profile",
+  "account": "account",
+  "landinaID": "Landina ID",
+  "email": "email",
+  "password": "password",
+  "coupon": "coupon",
+  "coupons": "coupons",
+  "brand": "brand",
+  "category": "category",
+  "categories": "categories",
+  "filter": "filter",
+  "filters": "filters",
   "searchField": "What are you looking for?",
   "couponTextTitle": "Coupon Text Title",
   "couponDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
   "copyCouponCode": "Copy coupon code to clipboard",
   "brandName": "Brand Name",
+  "setFilter": "Set Filter",
+  "chooseYourFilter": "Choose your filter",
   "loginPageDescription": "Please enter your landina id and password.",
-  "landinaID": "Landina ID",
-  "email": "email",
-  "password": "password",
   "loginToAccount": "Login to my account",
   "forgetPass": "Forget password",
   "createAnAccount": "Create an account"
