--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -13,6 +13,9 @@
   "categories": "دسته بندی ها",
   "filter": "فیلتر",
   "filters": "فیلترها",
+  "follow": "دنبال کردن",
+  "contact": "تماس",
+  "website": "وبسایت",
   "searchField": "دنبال چی می گردی؟",
   "couponTextTitle": "عنوان تخفیف موجود",
   "couponDescription": "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد",
@@ -26,5 +29,7 @@
   "createAnAccount": "ایجاد حساب کاربری",
   "emailPageDescription": "لطفا یک آدرس ایمیل معتبر برای حساب کاربری خود وارد کنید.",
   "passPageDescription": "لطفا یک رمز عبور قوی برای حساب کاربری خود وارد کنید.",
-  "goToTheNextLevel": "برو به مرحله بعد"
+  "goToTheNextLevel": "برو به مرحله بعد",
+  "forgetPassPageDescription": "لطفا برای بازیابی رمز آدرس ایمیل خود را وارد کنید.",
+  "sendRecoveryEmail": "ارسال ایمیل بازیابی"
 }
