--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -19,7 +19,7 @@
   "searchField": "دنبال چی می گردی؟",
   "couponTextTitle": "عنوان تخفیف موجود",
   "couponDescription": "لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد",
-  "copyCouponCode": "می خوام از  کد تخفیف استفاده کنم",
+  "copyCouponCode": "کد تخفیف رو کپی کن",
   "brandName": "نام برند",
   "setFilter": "اعمال فیتر",
   "chooseYourFilter": "لطفا فیلتر مورد نظرت رو انتخاب کن",
