--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,7 @@
   "profile": "profile",
   "account": "account",
   "landinaID": "Landina ID",
+  "username": "username",
   "email": "email",
   "emailAddress": "email address",
   "password": "password",
