--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -3,6 +3,7 @@
   "profile": "پروفایل",
   "account": "حساب کاربری",
   "landinaID": "شناسه لندینا",
+  "username": "نام کاربری",
   "email": "ایمیل",
   "emailAddress": "آدرس ایمیل",
   "password": "رمز عبور",
