--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,12 @@
   "profile": "profile",
   "account": "account",
   "landinaID": "Landina ID",
+  "accountType": "Account Type",
+  "personal": "personal",
+  "business": "business",
+  "creator": "creator",
+  "private": "private",
+  "public": "public",
   "username": "username",
   "email": "email",
   "emailAddress": "email address",
