--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -3,6 +3,12 @@
   "profile": "پروفایل",
   "account": "حساب کاربری",
   "landinaID": "شناسه لندینا",
+  "accountType": "نوع حساب",
+  "personal": "شخصی",
+  "business": "کسب و کار",
+  "creator": "تولید کننده",
+  "private": "خصوصی",
+  "public": "عمومی",
   "username": "نام کاربری",
   "email": "ایمیل",
   "emailAddress": "آدرس ایمیل",
